tests/machine/x/cobol/str_builtin.cob
       IDENTIFICATION DIVISION.
       PROGRAM-ID. STR_BUILTIN.
       DATA DIVISION.
       WORKING-STORAGE SECTION.
       PROCEDURE DIVISION.
       PERFORM STR USING 123
       DISPLAY STR_RES
       STOP RUN.
